--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -77,3 +77,28 @@ services:
       - nsqlookupd
     ports:
       - "4171:4171"
+
+  mongo:
+    container_name: mongo
+    image: mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${PASSWORD}
+    ports:
+      - "27017:27017"
+
+  mongo-express:
+    container_name: mongo-express
+    image: mongo-express
+    restart: always
+    ports:
+      - "8081:8081"
+    depends_on:
+      - mongo
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${USERNAME}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${PASSWORD}
+      ME_CONFIG_MONGODB_URL: mongodb://${USERNAME}:${PASSWORD}@mongo:27017/
+      ME_CONFIG_BASICAUTH_USERNAME: ${USERNAME}
+      ME_CONFIG_BASICAUTH_PASSWORD: ${PASSWORD}
