--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,16 @@ services:
     volumes:
       - ./data/postgres/:/var/lib/postgresql/data/
 
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PASSWORD}
+    ports:
+      - "5050:80"
+
   minio:
     container_name: minio
     image: minio/minio
